tests/valid/valid_constraints_scoping.csl
config ConstraintsScope {
  a?: boolean;
  b?: boolean;
  nested: {
    x?: boolean;
    y?: boolean;
    constraints {
      conflicts x with y;
    };
  };
  constraints {
    requires nested.x => b;
    validate exists(nested.x) ? a && b : true;
  };
}
