tests/invalid/invalid_requires_missing_key.csl
config InvalidRequiresMissing {
  a?: boolean;
  constraints { requires a => b; };
}
